# liclock

./: README.md
enclosure/: CWSA11AAN1H.stl  LCD-S401C71TR.stl  fsr_1.stl  liclock.scad  liclock.stl
enclosure/mcs_18_front/: export.py  mcs_18_front.csg  mcs_18_front.scad  mcs_18_front.stl
firmware/: Cargo.toml  Makefile  README.md  avr-attiny44a.json  avr-attiny84a.json
firmware/.cargo/: config.toml
firmware/src/: chess_clock.rs  config.rs  descriptor.rs  main.rs  switch.rs  timer.rs
firmware_1627/: Makefile  avr-attiny1627.json
firmware_1627/src/: chess_clock.rs  main.rs
pcb/: .gitignore  Clock-Parts.kicad_sym  fp-lib-table  liclock.kicad_wks  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  pcb_v1.kicad_pcb  pcb_v1.kicad_pro  sym-lib-table
pcb/Clock-Footprints.pretty/: 10129381-916001BLF.kicad_mod  150060RS75000.kicad_mod  2005290040.kicad_mod  352151RFT.kicad_mod  903250012.kicad_mod  903250014.kicad_mod  ABM8-20.000MHZ-10-B1U-T.kicad_mod  ATTINY1627.kicad_mod  ATtiny84a.kicad_mod  B240AE-13.kicad_mod  BATTERY.kicad_mod  CM315D32768HZFT.kicad_mod  CT-1205H-SMT.kicad_mod  CWSA11AAN1H.kicad_mod  DO5022P-104MLD.kicad_mod  ECS_200_18_4X_CKM.kicad_mod  ERJ-2R.kicad_mod  GJM0335C0J220GB01D.kicad_mod  GJM1555C1H110FB01D.kicad_mod  GRM033R60J104KE19D.kicad_mod  ICM7211AMIPL.kicad_mod  Inductor_6060.kicad_mod  LCD-S401C71TR.kicad_mod  MAX1836EUT50+T.kicad_mod  MAX5035BUSA+.kicad_mod  MCS 18 Front.kicad_mod  MX_LED.kicad_mod  NL37WZ14USG.kicad_mod  RDER71H104K0M1H03A.kicad_mod  SN74AHC138DR.kicad_mod  SN74F02D.kicad_mod  TC7WZ32FK_LJCT.kicad_mod  (+1 more)
(+13 files in other folders)
